<resources>
    <string name="app_name">CodeFestFinalApplication</string>
    <string name="codefest">CodeFest</string>

    <string name="sign_in">Sign in</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="nic">NIC</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="mobile">Mobile</string>
    <string name="female">Female</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Logout</string>
</resources>