<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registration">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="130dp"
            android:layout_height="100dp"
            android:src="@drawable/user"
            app:civ_border_color="#00000000"
            app:civ_border_width="2dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"/>


        <EditText
            android:id="@+id/name_field"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:textStyle="bold"
            android:textSize="20sp"
            android:background="@drawable/rounded_corners"
            android:layout_gravity="center"
            android:hint="@string/name"
            android:padding="6dp"
            />

        <EditText
            android:id="@+id/email_field"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@drawable/rounded_corners"
            android:editable="false"
            android:hint="@string/email"
            android:padding="6dp"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/mobile_field"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:textStyle="bold"
            android:textSize="20sp"
            android:background="@drawable/rounded_corners"
            android:layout_gravity="center"
            android:hint="@string/mobile"
            android:padding="6dp"
            />
        <EditText
            android:id="@+id/nic_field"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:textStyle="bold"
            android:textSize="20sp"
            android:background="@drawable/rounded_corners"
            android:layout_gravity="center"
            android:hint="@string/nic"
            android:padding="6dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="100dp"/>

        <RadioGroup
            android:id="@+id/user_gender"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:paddingStart="20dp">

            <RadioButton
                android:id="@+id/female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female" />

            <RadioButton
                android:id="@+id/male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male" />
        </RadioGroup>


        <Button
            android:id="@+id/signup"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="Signup"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:background="@drawable/rounded_corners"
            android:textAllCaps="false"
            />






</LinearLayout>

</ScrollView>